--- a/src/Pages/Onboarding/Onboarding.css
+++ b/src/Pages/Onboarding/Onboarding.css
@@ -1,5 +1,9 @@
-body {
-  background-image:url(images/photo.png);
+body{
+  overflow: hidden;
+}
+
+.onboard img{
+
   width: 100%;
   height: 90vh;
   
@@ -8,7 +12,6 @@ body {
   background-repeat: no-repeat;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 .on-board, .on-board *{
   box-sizing: border-box;
@@ -40,10 +43,12 @@ body {
   
   color: #FFFFFF; 
 }
- .onboard .dot{
-  width:10px;
-  height:10px;
-  background: #a01d1d;
-  border-radius: 50%;
  
+ .dots{
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  cursor: default;
  }
