--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -6,23 +6,23 @@
     border-radius: 10px;
     background-color: #f2f2f285;
     width: 500px;
-    height: 400px;
+    height: 427px;
     padding-bottom: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    max-width: 100vw;
-    max-height: 100vh;
-    margin-top: 7%;
-    margin-left: 30%;
+    max-width: 110vw;
+    max-height: 120vh;
+    margin-top: 4%;
+    margin-left: 32%;
     margin-bottom: 4.2%;
 }
 
 h1 {
     text-align: center !important;
     color: #2F3E91;
+    padding-top: 5vh;
 }
 
 .login {
-
     margin-bottom: 7%;
 }
 
@@ -49,8 +49,16 @@ input[type="password"] {
     resize: vertical;
 
 }
+input[type="email"]:focus,
+input[type="password"]:focus {
 
-input[type="submit"] {
+    padding: 13px 13px;
+    border: 1px solid rgb(238, 200, 200);
+   cursor:text;
+
+}
+
+button {
     background-color: #2F3E91;
     color: white;
     padding: 12px 12px;
@@ -60,8 +68,12 @@ input[type="submit"] {
     border-radius: 5px;
 
 }
+button a{
+    text-decoration: none;
+    color: inherit;
+}
 
-input[type="submit"]:hover {
+button:hover {
     background: rgb(147, 187, 255);
     border: none;
     text-decoration: none;
@@ -74,7 +86,6 @@ input[type="submit"]:hover {
 p a {
     text-decoration: none;
 
-
 }
 
 p a:hover {
@@ -85,7 +96,9 @@ p a:hover {
 .p {
     text-align: center;
 }
-
+.p a{
+    color: rgba(35, 99, 236, 0.719);
+}
 /* @media screen and (max-width: 600px) {
 
     .col,
