--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@
   height: 40vmin;
   pointer-events: none;
 }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
