--- a/src/Pages/Onboarding/Onboarding0.css
+++ b/src/Pages/Onboarding/Onboarding0.css
@@ -3,22 +3,17 @@ article {
     position: relative;
     overflow: hidden;
 }
-.tics{
-    position: fixed;
-}
-.rics {
-    position: fixed;
-}
 
-.rics img {
-    width: 100%;
+img {
+    width: 60vw;
+    height:78vh;
 }
 
 .info{
     position: absolute;
         width: 410px;
         height: 114px;
-        left: -3px;
+        left: 30%;
         bottom: 10px;
     text-align: center;
         font-family: 'Roboto';
@@ -30,14 +25,14 @@ article {
         align-items: flex-end;
         letter-spacing: 0.02em;
     
-        color: blue;
+        color: black;
 }
 
 .shadow{
     position: absolute;
         width: 426px;
         height: 267px;
-        left: 0px;
+        left: 30%;
         bottom: -60px;
         opacity: 0.9;
         background: linear-gradient(356.89deg, #332F2F 30%, rgba(51, 47, 47, 0) 98.22%);
