--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.bttn2{
+    background-color: #2b2861;
+    border-radius: 10px;
+    width: 300px;
+    height: 50px;
+    margin-top: 40px;
+}
