--- a/src/Pages/Signup Details/SignupDetails.css
+++ b/src/Pages/Signup Details/SignupDetails.css
@@ -33,7 +33,7 @@
 .auth_form-container_fields-content p {
     font-size: 1.5rem;
     font-family: Arial, Helvetica, sans-serif;
-    color: #05245a;
+    color: #0d2e66;
 }
 .auth_form-container_fields-content_input {
     display: flex;
@@ -184,4 +184,54 @@ small {
     .btn-1 {
         margin-right: 50px;
     }
+}
+@media screen and  (max-width: 800px) {
+    .auth__form-container {
+        flex-direction: column-reverse;
+    }
+    .auth__form-container_fields {
+        /* background-color: blue; */
+        justify-content: center;
+    }
+    .auth__form-container_fields-content {
+        /* background-color: blue; */
+        width: 100%;
+        margin-left: -15px;
+    }
+
+    .auth__form-container_fields-content__logo  {
+        /* background-color: blue; */
+        width: 10px;
+        margin-left: -10px;
+    }
+    .auth__form-container_fields-content__logo img {
+        /* background-color: blue; */
+        width: 20px;
+        height: 20px;
+    }
+    .auth__form-container_fields-content_input input {
+        width: 90%;
+
+    }
+    .btn-1 {
+        margin-right: 50px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .btn-1 {
+        margin-left: 67px;
+    }
+    .auth_form-container_fields-content_input label {
+        margin-left: 10px;
+    }
+    .auth_form-container_fields-content_input input {
+        margin-left: 10px;
+    }
+    small {
+        margin-left: 10px;
+    }
+   
+ 
+
 }
