--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,14 @@ code {
     height: 50px;
     margin-top: 40px;
 }
+/*.container {
+  width: var(--container-width-lg);
+  margin: 0 auto;
+}
+
+:root {
+  
+  --container-width-lg: 75%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+}*/
