--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -11,11 +11,7 @@ body{
             grid-template-columns: 50% 50%;
             gap:1%;
        }
-       .alltext{
-        display: flex;
-        flex-direction: column;
-        gap:1.2rem;
-       }
+      
            .Part1 {
                padding: 1.2rem;   
                text-align: center;
@@ -286,3 +282,81 @@ body{
                   
                     top: 1rem;
                 }
+
+                /*making responsive for other devices*/
+                                @media screen and (max-width: 600px) {
+                                    .first-section {
+                                            background: rgba(41, 37, 97, 0.93);
+                                            border-bottom-right-radius: 10%;
+                                            border-bottom-left-radius: 10%;
+                                            height: 30rem;
+                                        }
+                                    .general {
+                                            display: grid;
+                                            grid-template-columns: 100%;
+                                            gap: 1%;
+                                        }
+                                    .Part1 {
+                                            padding: 1.2rem;
+                                            text-align: center;
+                                            margin-left: 0rem;
+                                            font-family: 'DM Sans';
+                                            font-style: italic;
+                                            font-weight: 700;
+                                            font-size: 15px;
+                                        
+                                    
+                                            color: #ECE6E6;
+                                        
+                                }
+          .Part2 {
+              text-align: center;
+              font-family: 'DM Sans';
+              font-style: normal;
+              font-weight: 700;
+              font-size: 30px;
+              line-height: 50px;
+              margin-left: 1rem;
+             margin-top: 1rem;
+              color: #FFFFFF;
+          }
+                   
+        
+                   .Part3 {
+                       margin-left: 1rem;
+                       margin-top: 1rem;
+                       width: max-content;
+                   }
+        
+                   .anchor {
+                       background: #FAAF40;
+                       font-family: 'Poppins';
+                       font-style: normal;
+                       font-weight: bolder;
+                       font-size: 6px;
+                       color: #32230D;
+                       padding: 0.5rem 0.5rem;
+                       border-radius: 20px;
+                       border: 1px solid;
+                       transition: all 400ms ease;
+                 
+                   }
+        
+                   .anchor:hover {
+                       font-size: 10px;
+                       background: transparent;
+                       color: #FAAF40;
+                       border: 3px solid;
+                       border-color: #FAAF40;
+        
+                   }
+        
+                   .cash {
+                       margin-top: -13rem;
+                       margin-left:10rem;
+                   }
+                   .cash .cashimg{
+                    width:100%;
+                   }
+        }
+                                
