--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Joan&family=Libre+Baskerville&family=Poppins:wght@100&display=swap');
 * {
     box-sizing: border-box;
+    
 }
 
 .container {
     border-radius: 10px;
     background-color: #f2f2f285;
-    width: 500px;
-    height: 427px;
+    width: 38vw;
+    height: 90vh;
     padding-bottom: 10px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     max-width: 110vw;
@@ -14,17 +16,41 @@
     margin-top: 4%;
     margin-left: 32%;
     margin-bottom: 4.2%;
+    box-shadow: 0px 1px 5px rgb(0 0 0 / 10%);
+    font-family: 'Joan', serif;
 }
-
-h1 {
+.logo{
+    display: flex;
+     margin-left: 20%;
+     /* background-color: red; */
+     width: 100px;
+     height: 100px;
+    font-family: 'Libre Baskerville', serif !important;
+}
+.re, .ceive{
+    padding-top: 38%;
+    /* background-color: blue; */
+    margin-left: 0px;
+}
+h2 {
     text-align: center !important;
     color: #2F3E91;
-    padding-top: 5vh;
+    padding-top: 2vh;
+   
 }
 
+.invalid {
+    border: 1px solid red !important;
+}
+small {
+    color: red;
+    text-align: left;
+    font-size: 15px;
+}
 .login {
     margin-bottom: 7%;
 }
+
 
 .col,
 .login {
@@ -57,26 +83,33 @@ input[type="password"]:focus {
    cursor:text;
 
 }
-
+.remember{
+    display: flex;
+    justify-content: space-around
+}
+.pass{
+   
+    margin-top: 0px;
+}
 button {
-    background-color: #2F3E91;
+    background-color: #f7941d;
     color: white;
     padding: 12px 12px;
-    width: 25vw;
+    width: 19vw;
+    margin-left: 25%;
     border: none;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 25px;
 
 }
 button a{
     text-decoration: none;
-    color: inherit;
+
 }
 
 button:hover {
     background: rgb(147, 187, 255);
     border: none;
-    text-decoration: none;
     font-family: "Lato", sans-serif;
     font-size: 15px;
     color: white;
@@ -93,80 +126,170 @@ p a:hover {
 
 }
 
-.p {
-    text-align: center;
-}
-.p a{
-    color: rgba(35, 99, 236, 0.719);
-}
-/* @media screen and (max-width: 600px) {
-
-    .col,
-    input[type="submit"] {
-
-        margin-top: 0;
-        color: rgb(0, 217, 255);
-        width: 10vw;
-        padding: 12px 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        resize: vertical;
-    }
-}
-
 @media screen and (max-width: 600px) {
 
-    input[type="submit"],
-    input[type="email"],
-    input[type="password"] {
-        margin-top: 20px;
-        color: #010b0c;
-        width: 10vw;
-        padding: 12px 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        resize: vertical;
+.container {
+        width: 95%;
+        height: 90%;
+        padding-bottom: 10px;
+        margin-top: 30%;
+        margin-left: 7%;
+        margin-bottom: 25%;
+      
     }
+
+
+    .col,
+    .login {
+        padding-left: 10px;
+        width: 95%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+  input[type="email"],
+  input[type="password"] {
+      width: 90%;
+      padding: 20px 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+
+
+  }
+    .pass {
+        margin-top: 0px;
+    }
+
+    button {
+        
+        width: 50%;
+        margin-left: 6%;
+
+    }
+
+    
 }
 
 @media screen and (max-width: 450px) {
 
-    .col,
-    input[type="submit"],
-    input[type="email"],
-    input[type="password"] {
-
-        margin-top: 0;
-        color: rgb(0, 217, 255);
-        width: 10vw;
-        padding: 12px 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        resize: vertical;
-
+.logo {
+        display: flex;
+        margin-left: 10%;
+        /* background-color: red; */
+        width: 80px;
+        height: 80px;
+        font-family: 'Libre Baskerville', serif !important;
     }
-}*/
 
-@media screen and (min-width: 350px and max-width: 550px) {
+    .re,
+    .ceive {
+        padding-top: 38%;
+        margin-left: 0px;
+    }
 
-    input[type="submit"],
-    input[type="email"],
-    input[type="password"] {
-        margin-top: 20px;
-        color: #010b0c;
-        width: 50vw;
-        padding: 12px 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        resize: vertical;
+    h2 {
+
+        padding-top: 1vh;
+
     }
 
     .container {
-        border-radius: 5px;
-        width: 350px;
-        height: 500px;
-        margin-top: 60%;
-        margin-left: 5%;
-        margin-bottom: 40%;
+        width: 95%;
+        height: 100%;
+        padding-bottom: 10px;
+        margin-top: 30%;
+        margin-left: 7%;
+        margin-bottom: 35%;
+
+    }
+
+
+    .col,
+    .login {
+        padding-left: 10px;
+        width: 95%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    input[type="email"],
+    input[type="password"] {
+        width: 90%;
+        padding: 20px 12px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+       
+
+    }
+
+    .pass {
+        margin-top: 0px;
+    }
+
+    button {
+
+        width: 50%;
+        margin-left: 4%;
+
+    }
+}
+
+@media screen and ( max-width: 376px) {
+
+    .logo {
+            display: flex;
+            margin-left: 10%;
+            /* background-color: red; */
+            width: 80px;
+            height: 80px;
+            font-family: 'Libre Baskerville', serif !important;
+        }
+    
+        .re,
+        .ceive {
+            padding-top: 38%;
+            /* background-color: blue; */
+            margin-left: 0px;
+        }
+    
+        h2 {
+
+            padding-top: 1vh;
+    
+        }
+.container {
+        width: 95%;
+        height:100%;
+        padding-bottom: 10px;
+        margin-top: 30%;
+        margin-left: 7%;
+        margin-bottom: 35%;
+
+    }
+
+
+    .col,
+    .login {
+        padding-left:10px;
+        width: 95%;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+input[type="email"],
+input[type="password"] {
+    width: 90%;
+    padding: 20px 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+
+}
+    .pass {
+        margin-top: 0px;
+    }
+
+    button {
+        width: 50%;
+        margin-left: 4%;
+
     }
 } 
