--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -309,7 +309,7 @@ body{
                                            font-family: 'DM Sans';
                                            font-style: italic;
                                            font-weight: 700;
-                                           font-size: 15px;
+                                           font-size: 30px;
                 
                 
                                            color: #ECE6E6;
@@ -321,7 +321,7 @@ body{
                                            font-family: 'DM Sans';
                                            font-style: normal;
                                            font-weight: 700;
-                                           font-size: 30px;
+                                           font-size:50px;
                                            line-height: 50px;
                                            margin-left: 1rem;
                                            margin-top: 1rem;
@@ -331,7 +331,7 @@ body{
                 
                                        .Part3 {
                                            margin-left: 1rem;
-                                           margin-top: 1rem;
+                                           margin-top: 3rem;
                                            width: max-content;
                                        }
                 
@@ -340,7 +340,7 @@ body{
                                            font-family: 'Poppins';
                                            font-style: normal;
                                            font-weight: bolder;
-                                           font-size: 13px;
+                                           font-size: 29px;
                                            color: #32230D;
                                            padding: 0.5rem 0.5rem;
                                            border-radius: 20px;
@@ -359,38 +359,41 @@ body{
                                        }
                 
                                        .cash {
-                                           margin-top: -13rem;
-                                           margin-left: 10rem;
+                                           margin-top: -17rem;
+                                           margin-left: 30rem;
                                        }
                 
                                        .cash .cashimg {
-                                           width: 100%;
+                                           width: 90%;
                                        }
                 
                                        /*second*/
                 
-                
+                                       .second-section{
+                                        margin-bottom: 9rem;
+                                       }
                                        .reasons {
                 
                                            display: grid;
                                            grid-template-columns: repeat(2, 2fr);
-                                           gap: 0rem;
+                                           gap: 2rem;
                 
                                        }
                 
                                        .second-section h2 {
-                                           font-size: larger;
-                                           text-align: justify;
+                                           font-size:xx-large;
+                                           font-weight: bolder;
+                                           text-align: center;
                                            margin-left: -6rem;
                                            margin-right: 10rem;
-                                           line-height: 1rem;
+                                           line-height: 2rem;
                                            margin-bottom: -2rem;
                                        }
                 
                                        .offers {
-                                           width: 170px;
+                                           width: 200px;
                                            height: 209px;
-                                           margin-left: -8rem;
+                                           margin-left: -6rem;
                                            margin-right: 10rem;
                                        }
                 
@@ -446,8 +449,10 @@ body{
                 
                                        /*third-section*/
                                        .third-section h2 {
-                                           font-size: larger;
+                                           font-size:xx-large;
+                                           font-weight: bolder;
                                            margin-top: -0.5rem;
+                                           margin-bottom: 2rem;
                                        }
                 
                                        .speech {
@@ -461,7 +466,7 @@ body{
                                        .speech h3 {
                                            margin-left: -1rem;
                                            font-weight: bold;
-                                           font-size: 23px;
+                                           font-size: 33px;
                                            line-height: 33px;
                                            padding-bottom: 0.5rem;
                                            color: #504848;
@@ -478,8 +483,8 @@ body{
                 
                                        .speech p {
                                            font-weight: 500;
-                                           font-size: 19px;
-                                           line-height: 21px;
+                                           font-size: 34px;
+                                           line-height: 31px;
                                            text-align: start;
                                            color: #504848;
                                            word-spacing: 0.1rem;
@@ -493,7 +498,7 @@ body{
                                        .speech2 h3 {
                                            margin-left: -13rem;
                                            font-weight: bold;
-                                           font-size: 23px;
+                                           font-size: 33px;
                                            line-height: 33px;
                                            padding-bottom: 0.5rem;
                                            color: #504848;
@@ -502,8 +507,8 @@ body{
                                        .speech2 p {
                                            margin-left: -13rem;
                                            font-weight: 500;
-                                           font-size: 19px;
-                                           line-height: 21px;
+                                           font-size: 34px;
+                                           line-height: 31px;
                                            text-align: start;
                                            color: #504848;
                                            word-spacing: 0.1rem;
@@ -526,7 +531,7 @@ body{
                                            box-shadow: 11px 20px 4px rgba(0, 0, 0, 0.25);
                                            border-radius: 0px;
                                            width: max-content;
-                                           margin-left: 2.1rem;
+                                           margin-left: 11rem;
                                            padding-top: 1rem;
                                            padding-bottom: 1rem;
                                            padding-left: 0.5rem;
