--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,11 +1,12 @@
 footer {
     /* styling for the footer background*/
-    background: #2F3E91;
+    background: #292561;
     width: 100vw;
-    height: 6rem;
+    height: 5rem;
     text-align: center;
     font-size: 0.9rem;
     margin-top: 2rem;
+    border-radius: 300px 0px 0px 0px;
 }
 
 
@@ -14,20 +15,19 @@ footer {
 .leoo {
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 1.7rem;
     margin-bottom: 0.8rem;
     position: relative;
     top: 1rem;
 }
 
 .leoo a {
-    background: white;
-    color: var(--color-white);
-    font-size: 1.3rem;
+    background: #333f8f;
+    color: white;
+    font-size: 1.1rem;
     padding: 0.2rem;
-    border-radius: 0.7rem;
+    border-radius: 50%;
     display: flex;
-    border: 1px solid transparent;
 }
 
 .leoo a:hover {
@@ -47,4 +47,11 @@ footer {
 
 .footdet {
     color: white;
+}
+
+@media screen and (min-width: 350px and max-width: 1040px) {   
+    footer {
+        width:100vw;
+    }
+
 }
